--- a/phtc/templates/logic_model/subtemplates/box.html
+++ b/phtc/templates/logic_model/subtemplates/box.html
@@ -5,7 +5,7 @@
 		    		<div class = "box_handle">
 		    			<i class="icon-large icon-move"></i>
 		    		</div>
-			    	<input type="text" value ="<%=contents%>" class="text_box"></input>
+			    	<textarea value ="<%=contents%>" class="text_box"></textarea>
 		    	</div>
 	    	</div>
 	    </div>
