--- a/phtc/logic_model/media/css/logic_model.css
+++ b/phtc/logic_model/media/css/logic_model.css
@@ -66,20 +66,32 @@ span.backbone_column_span {
 
 .text_box {
   display: inline;
-  position: relative;
+  position: absolute;
   font-size: .8em;
   line-height: 1em; 
-  top:    10px;
+  top:    0px;
   left:   10px;
-  width : 80px;
-  height: 30px;
+  width : 110px;
+  height: 41px;
 }
 
 .box_draggable .box_handle {
   display: inline;
-  position: relative;
-  left : 6px;
-  top : 6px;
+  position: absolute;
+  left : -4px;
+  top :  -4px;
+}
+
+.box_draggable .switch_color {
+  display: inline;
+  position: absolute;
+  left : 0px;
+  top : 10px;
+  height:15px;
+  width:15px;
+  border: 1px solid #ccc;
+  background-color: #ccc;
+  color: grey;
 }
 
 div.done-button {
