--- a/phtc/templates/logic_model/subtemplates/box.html
+++ b/phtc/templates/logic_model/subtemplates/box.html
@@ -5,6 +5,7 @@
 		    		<div class = "box_handle">
 		    			<i class="icon-large icon-move"></i>
 		    		</div>
+		    		<div class = "switch_color">C</div>
 			    	<textarea value ="<%=contents%>" class="text_box"></textarea>
 		    	</div>
 	    	</div>
