ok this is starting to work. moving to dev branch.

--- a/phtc/templates/logic_model/block_js.html
+++ b/phtc/templates/logic_model/block_js.html
@@ -11,3 +11,4 @@
 </script>
 {%include "logic_model/subtemplates/column.html" %}
 {%include "logic_model/subtemplates/box.html" %}
+{%include "logic_model/subtemplates/scenario.html" %}
