--- a/phtc/templates/logic_model/subtemplates/initial_scenario_choice.html
+++ b/phtc/templates/logic_model/subtemplates/initial_scenario_choice.html
@@ -1,18 +1,4 @@
 <div class="logic-model-initial-scenario_choice">
-	<h3>Scenario 1</h3>
-	<p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
-	<div class="btn btn-primary btn-large btn-success">Try this scenario</div>
-
-	<h3>Scenario 2</h3>
-	<p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
-	<div class="btn btn-primary btn-large btn-success">Try this scenario</div>
-
-	<h3>Scenario 3</h3>
-	<p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
-	<div class="btn btn-primary btn-large btn-success">Try this scenario</div>
-
-	<br/>
-	<br/>
-	
+	<div class="logic-model-initial-scenario-list"></div>
 	<div class="btn btn-primary btn-large next_phase">&rarr;</div>
 </div>
