--- a/phtc/logic_model/media/css/logic_model.css
+++ b/phtc/logic_model/media/css/logic_model.css
@@ -132,8 +132,6 @@ div.done-button.visible {
   background-color: blue;
 }
 
-
-
 .inactive_box {
   background-color: darkgrey;
   opacity:0.4;
@@ -142,7 +140,11 @@ div.done-button.visible {
 
 /* Pick scenario:*/
 #phase_container.pick_scenario div.logic-model-columns, 
-#phase_container.pick_scenario textarea#reflections {
+#phase_container.pick_scenario textarea#reflections,
+#phase_container.pick_scenario .change_scenario,
+#phase_container.pick_scenario .scenario_info,
+#phase_container.pick_scenario .scenario_instructions,
+#phase_container.pick_scenario .next_phase  {
     display:none;
 }
 
@@ -152,6 +154,12 @@ div.done-button.visible {
 #phase_container.add_inputs div.logic-model-initial-scenario_choice {
     display:none;
 }
+
+
+#phase_container.add_inputs div.previous_phase {
+    display:none !important; /* no need to since the "change scenario" button does the same thing. */
+}
+
 
 /* Add long term outcomes */
 #phase_container.add_long_term_outcomes div.logic-model-initial-scenario_choice {
