--- a/phtc/templates/logic_model/subtemplates/table.html
+++ b/phtc/templates/logic_model/subtemplates/table.html
@@ -1,10 +1,14 @@
+
+<!-- the whole table goes here: -->
+
+<div class ="well">
+	<div class="scenario_instructions">Scenario instructions go here</div>
+	<div class="btn btn-info change_scenario">Change scenario</div>
+</div>
+
+
 <!-- the whole table goes here: -->
 <div class="logic-model-columns"></div>
 
 <!-- reflections -->
-<textarea id ="reflections">Reflections</textarea>
-
-<!-- any other navigation stuff -->
-<div id ="phase_nav">
-	<div class="btn btn-primary btn-large previous_phase">&larr;</div>
-</div>
+<textarea id ="reflections">Notes</textarea>
