--- a/phtc/templates/logic_model/subtemplates/scenario.html
+++ b/phtc/templates/logic_model/subtemplates/scenario.html
@@ -1,5 +1,5 @@
 <script type="text/template" id="logic-model-scenario">
-	<div class ="well">
+	<div class="well" id="scenario_container">
 		<h4 class ="scenario_title"><%=title%></h4>
 		<div class ="instructions_for_scenario"><%=instructions%></div>
 		<div class="btn btn-success try_this_scenario">Try this scenario</div>
