--- a/phtc/templates/logic_model/subtemplates/table.html
+++ b/phtc/templates/logic_model/subtemplates/table.html
@@ -1,14 +1,9 @@
-
 <!-- the whole table goes here: -->
-
-<div class ="well">
+<div class ="well scenario_instructions_container">
 	<div class="scenario_instructions">Scenario instructions go here</div>
 	<div class="btn btn-info change_scenario">Change scenario</div>
 </div>
-
-
 <!-- the whole table goes here: -->
 <div class="logic-model-columns"></div>
-
 <!-- reflections -->
 <textarea id ="reflections">Notes</textarea>
