--- a/phtc/templates/logic_model/subtemplates/column.html
+++ b/phtc/templates/logic_model/subtemplates/column.html
@@ -1,8 +1,13 @@
 <script type="text/template" id="logic-model-column">
 	<span class ="column_span <%=css_classes %>">
-	    <div class="colhead"><%=name %></div>
+	    <div class="colhead">
+	    	<%=name %>
+			<i class="column_help_button icon-large icon-question-sign"></i>
+	    </div>
 	    <span class ="boxes"></span>
-	    <div class="btn btn-primary btn-large btn-success done-button">I'm Done!</div>
+	    <div class="btn btn-primary btn-large btn-success done-button">
+	    	I'm Done!
+	    </div>
 	    <div class="divclearfix"></div>
     </span>
 </script>
