--- a/phtc/templates/logic_model/subtemplates/table.html
+++ b/phtc/templates/logic_model/subtemplates/table.html
@@ -1,5 +1,6 @@
 <!-- the whole table goes here: -->
 <div class ="well scenario_instructions_container">
+	<h4 class="scenario_title_2">Scenario title goes here</h4>
 	<div class="scenario_instructions">Scenario instructions go here</div>
 	<div class="btn btn-info change_scenario">Change scenario</div>
 </div>
