--- a/phtc/templates/logic_model/subtemplates/help_box.html
+++ b/phtc/templates/logic_model/subtemplates/help_box.html
@@ -1,13 +1,12 @@
 <div class="help_box">this is just a placeholder.</div>
-
 <script type="text/template" id="logic-model-help-box">
 	<div class="alert alert-info">
-	  <button type="button" class="close" data-dismiss="alert">
-	  	&times;
-	  </button>
-	  <strong><%=definition%></strong>
+	<button type="button">
+		&times;
+	</button>
+	  <strong><%=help_title%></strong>
 	 	<div>
-		  <%=examples%>
+		  <%=help_body%>
 		</div>
 	</div>
 </script>
