per-game-phase help boxen

--- a/phtc/logic_model/media/css/logic_model.css
+++ b/phtc/logic_model/media/css/logic_model.css
@@ -13,6 +13,13 @@ textarea#reflections {
   font-size: .8em;
 }
 
+.game-phase-help-button-div {
+  display: inline;
+  position: relative;
+  left: 600px;
+  top: -25px;
+}
+
 .logic-model-columns {
     width: 840px;
     /*
