--- a/phtc/templates/logic_model/logic_model.html
+++ b/phtc/templates/logic_model/logic_model.html
@@ -1,17 +1,17 @@
 <div class="logic-model-container">
 	<div id="phase_container">
 		<div class ="well">
-			<div class="logic-model-game-phase-instructions">Instructions for this phase of the game.</div>
+			<div class="logic-model-game-phase-name">Name of this phase of the game.</div>
+			<div class="game-phase-help-button-div">
+				<i class="game-phase-help-button icon-large icon-question-sign"></i>
+	    	</div>
 			<div class="btn btn-info previous_phase">&larr; Go back</div>
 		</div>
 		<!-- choose scenario -->
 		{%include "logic_model/subtemplates/initial_scenario_choice.html" %}
 		<!-- all subsequent phases of the game -->
 		{%include "logic_model/subtemplates/table.html" %}
-
 		<!-- the help box -->
 		{%include "logic_model/subtemplates/help_box.html" %}
-
-
 	</div>
 </div>
