--- a/phtc/logic_model/media/css/logic_model.css
+++ b/phtc/logic_model/media/css/logic_model.css
@@ -92,6 +92,7 @@ span.backbone_column_span {
   left:   10px;
   width : 110px;
   height: 41px;
+  resize: none;
 }
 
 .box_draggable .box_handle {
