--- a/phtc/templates/logic_model/subtemplates/column.html
+++ b/phtc/templates/logic_model/subtemplates/column.html
@@ -9,6 +9,9 @@
 	    	</div>
 	    </div>
 	    <span class ="boxes"></span>
+	    <div class="btn btn-info add_a_row_button">
+	    	+
+	    </div>
 	    <div class="btn btn-primary btn-large btn-success done-button">
 	    	I'm Done!
 	    </div>
