ok add button is working nicely

--- a/phtc/logic_model/media/css/logic_model.css
+++ b/phtc/logic_model/media/css/logic_model.css
@@ -124,6 +124,17 @@ div.done-button.visible {
 }
 
 
+
+div.add_a_row_button {
+  display:  none;
+}
+
+div.add_a_row_button.visible {
+ display: inline-block;
+}
+
+
+
 .box_draggable .box_handle .icon-move{
   display: inline;
   position: absolute;
