--- a/phtc/templates/logic_model/subtemplates/table.html
+++ b/phtc/templates/logic_model/subtemplates/table.html
@@ -4,6 +4,12 @@
 	<div class="scenario_instructions">Scenario instructions go here</div>
 	<div class="btn btn-info change_scenario">Change scenario</div>
 </div>
+
+		
+<div class = "show_expert_logic_model_link_div">
+    <a target="_blank" href="/_logic_model/media/pdf/expert_logic_model.pdf" class=" show_expert_logic_model_link btn btn-info" >Show expert logic model</a>
+</div>
+
 <!-- the whole table goes here: -->
 <div class="logic-model-columns"></div>
 <!-- reflections -->
