--- a/phtc/templates/logic_model/subtemplates/help_box.html
+++ b/phtc/templates/logic_model/subtemplates/help_box.html
@@ -1,6 +1,6 @@
 <div class="help_box">this is just a placeholder.</div>
 <script type="text/template" id="logic-model-help-box">
-	<div class="alert alert-info">
+	<div class="alert alert-info help-alert">
 	<button type="button">
 		&times;
 	</button>
