--- a/phtc/logic_model/media/css/logic_model.css
+++ b/phtc/logic_model/media/css/logic_model.css
@@ -79,7 +79,7 @@ span.backbone_column_span {
   margin: 2px;
   padding: 2px;
   float: left;
-  border: 1px solid #ccc;
+  border: 2px solid;
   font-size: .8em;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
@@ -105,7 +105,7 @@ span.backbone_column_span {
   left:   10px;
   width : 110px;
   height: 41px;
-  background-color: #444;
+  background-color: #FFF;
   resize: none;
 }
 
