--- a/media/css/main.css
+++ b/media/css/main.css
@@ -506,9 +506,11 @@ a.completed {
 	margin: 0;
 	padding: 0;
 	border: 0;
+    /*
 	font-weight: bold;
 	color: #393;
 	text-transform: capitalize !important;
+    */
 }
 
 .incorrect
@@ -516,9 +518,11 @@ a.completed {
 	margin: 0;
 	padding: 0;
 	border: 0;
-	font-weight: bold;
+	/*
+    font-weight: bold;
 	color: #c00;
 	text-transform: capitalize !important;
+    */
 }
 
 table
