--- a/phtc/templates/logic_model/logic_model.html
+++ b/phtc/templates/logic_model/logic_model.html
@@ -1,11 +1,11 @@
 <div class="logic-model-container">
 	<div id="phase_container">
 
-		<div class ="well">
+		<div>
 			<div class="logic-model-game-phase-name">Name of this phase of the game.</div>
-			<div class="game-phase-help-button-div">
+			{% comment %}<div class="game-phase-help-button-div">
 				<i class="game-phase-help-button icon-large icon-question-sign"></i>
-	    	</div>
+	    	</div>{% endcomment %}
 			<div class="btn btn-info previous_phase">&larr; Go back</div>
 		</div>
 
