--- a/phtc/templates/logic_model/subtemplates/help_box.html
+++ b/phtc/templates/logic_model/subtemplates/help_box.html
@@ -1,11 +1,8 @@
 <div class="help_box">this is just a placeholder.</div>
 <script type="text/template" id="logic-model-help-box">
-	<div class="alert alert-info help-alert">
-	<button type="button">
-		&times;
-	</button>
-	  <strong><%=help_title%></strong>
-	 	<div>
+	<div class="testing popover-parent">
+	  <h3 class="popover-title"><%=help_title%></h3>
+	 	<div class="popover-content">
 		  <%=help_body%>
 		</div>
 	</div>
