--- a/phtc/templates/logic_model/subtemplates/table.html
+++ b/phtc/templates/logic_model/subtemplates/table.html
@@ -1,13 +1,24 @@
 <!-- the whole table goes here: -->
-<div class ="well scenario_instructions_container">
-	<h4 class="scenario_title_2">Scenario title goes here</h4>
-	<div class="scenario_instructions">Scenario instructions go here</div>
-	<div class="btn btn-info change_scenario">Change scenario</div>
+<div class="scenario_block scenario_instructions_container">
+    <div class="scenario_header">
+        <div class="scenario_criteria scenario_title_2">
+            Scenario title goes here
+        </div>
+    </div> 
+    <div class="scenario_content scenario_instructions">
+        Scenario instructions go here
+    </div> 
 </div>
-<div class = "wipe-table-div well">
+
+
+
+
+
+<div class = "wipe-table-div">
     <div class = "wipe-table-button btn btn-danger">
         Clear table
     </div>
+	<div class="btn btn-info change_scenario">Change scenario</div>
     <div class = "wipe-table-button-div alert">
         <h3>Are you sure you want to clear the table?</h3> This will permanently erase everything you typed in the boxes.
         <div class = "wipe-table-confirm-button btn btn-danger">
@@ -18,6 +29,8 @@
         </div>
     </div>
 </div>
+
+
 
 <div class = "show_expert_logic_model_link_div">
     <a target="_blank" href="/_logic_model/media/pdf/expert_logic_model.pdf" class=" show_expert_logic_model_link btn btn-info" >Show expert logic model</a>
