--- a/phtc/templates/logic_model/subtemplates/scenario.html
+++ b/phtc/templates/logic_model/subtemplates/scenario.html
@@ -2,6 +2,6 @@
 	<div class="well" id="scenario_container">
 		<h3 class ="scenario_title"><%=title%></h3>
 		<div class ="instructions_for_scenario"><%=instructions%></div>
-		<div class="btn btn-success try_this_scenario">Try this scenario</div>
+		<div class="btn btn-primary try_this_scenario">Try this scenario</div>
 	</div>
 </script>	
