--- a/phtc/templates/logic_model/logic_model.html
+++ b/phtc/templates/logic_model/logic_model.html
@@ -6,7 +6,7 @@
 			{% comment %}<div class="game-phase-help-button-div">
 				<i class="game-phase-help-button icon-large icon-question-sign"></i>
 	    	</div>{% endcomment %}
-			<div class="btn btn-info previous_phase">&larr; Go back</div>
+			<div class="btn btn-primary previous_phase">&larr; Go back</div>
 		</div>
 
 		<!-- choose scenario -->
