--- a/phtc/templates/logic_model/subtemplates/help_box.html
+++ b/phtc/templates/logic_model/subtemplates/help_box.html
@@ -1,9 +1,10 @@
 <div class="help_box">this is just a placeholder.</div>
 <script type="text/template" id="logic-model-help-box">
-	<div class="testing popover-parent">
+	<div class="popover-parent">
 	  <h3 class="popover-title"><%=help_title%></h3>
 	 	<div class="popover-content">
 		  <%=help_body%>
+		  <div class="pull-right"><div class="btn btn-primary">Close</div></div>
 		</div>
 	</div>
 </script>
