--- a/phtc/templates/logic_model/subtemplates/help_box.html
+++ b/phtc/templates/logic_model/subtemplates/help_box.html
@@ -4,7 +4,7 @@
 	  <h3 class="popover-title"><%=help_title%></h3>
 	 	<div class="popover-content">
 		  <%=help_body%>
-		  <div class="pull-right"><div class="btn btn-primary">Close</div></div>
 		</div>
+		  <div class="pull-center"><div class="btn btn-primary">Close</div></div>
 	</div>
 </script>
