--- a/phtc/templates/logic_model/logic_model.html
+++ b/phtc/templates/logic_model/logic_model.html
@@ -22,8 +22,8 @@
 
 <script type="text/javascript" language="javascript">
     jQuery(document).ready(function(jQuery){
-        jQuery(".scenario_header").click(function(){
-            jQuery(this).next(".scenario_content").slideToggle("fast");
+        jQuery(".scenario-header").click(function(){
+            jQuery(this).next(".scenario-content").slideToggle("fast");
             jQuery(this).toggleClass("active");
         });
     });
