--- a/phtc/templates/logic_model/subtemplates/table.html
+++ b/phtc/templates/logic_model/subtemplates/table.html
@@ -1,11 +1,11 @@
 <!-- the whole table goes here: -->
-<div class="scenario_block scenario_instructions_container">
-    <div class="scenario_header">
-        <div class="scenario_criteria scenario_title_2">
+<div class="scenario-block scenario_instructions_container">
+    <div class="scenario-header">
+        <div class="scenario-criteria scenario_title_2">
             Scenario title goes here
         </div>
     </div> 
-    <div class="scenario_content scenario_instructions">
+    <div class="scenario-content scenario_instructions">
         Scenario instructions go here
     </div> 
 </div>
