--- a/phtc/logic_model/media/css/logic_model.css
+++ b/phtc/logic_model/media/css/logic_model.css
@@ -1,27 +1,34 @@
-#sidebarleft, li.next, li.previous, h1.section-label-header{
+h1.section-label-header,
+li.next,
+li.previous,
+#sidebarleft {
     display:none;
 }
 
 header#masthead {
-  height:60px !important;
+    height: 60px !important;
 }
 
 .row {
-  padding-top: 0px;
+    padding-top: 0px;
 }
+
 textarea#reflections {
-  margin: 2px;
-  padding: 2px;
-  width:835px;
-  clear:both;
-  font-size: .8em;
+    margin: 5px 0 0 0;
+    padding: 5px;
+    border: 1px solid #999;
+    width: 835px;
+    height: 50px;
+    clear: both;
+    font: normal 11px/100% verdana;
+    color: #000;
 }
 
 .game-phase-help-button-div {
-  display: inline;
-  position: relative;
-  left: 600px;
-  top: -25px;
+    display: inline;
+    position: relative;
+    left: 600px;
+    top: -25px;
 }
 
 .logic-model-columns {
@@ -33,15 +40,16 @@ textarea#reflections {
 }
 
 .centered {
-  margin: auto;
-  display: block;
+    margin: auto;
+    display: block;
 }
 
 .previous_phase {
-  width: 100px;
+    width: 100px;
 }
+
 .divclearfix {
-  clear: both;
+    clear: both;
 }
 
 span.column_span {
@@ -55,94 +63,91 @@ span.backbone_column_span {
 }
 
 .help_box {
-  display: none;
-  position: absolute;
-  top: 50px;
-  left: 20px;
-  width: 880px;
-  z-index: 300;
+    display: none;
+    position: absolute;
+    top: 50px;
+    left: 20px;
+    width: 880px;
+    z-index: 300;
 }
 
 .help-alert {
-  width: 400px;
-  height: 400px;
-  opacity:0.9;
-  filter:alpha(opacity=0.9);
+    width: 400px;
+    height: 400px;
+    opacity:0.9;
+    filter:alpha(opacity=0.9);
 }
 
 .cell {
-  width: 130px;
-  height: 50px;
-  margin: 2px;
-  padding: 2px;
-  float: left;
-  border: 2px solid;
-  font-size: .8em;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    width: 130px;
+    height: 50px;
+    margin: 2px;
+    padding: 2px;
+    float: left;
+    border: 2px solid;
+    font-size: .8em;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .colhead {
-  font-size: .8em;
-  width: 130px;
-  height: 50px;
-  margin: 2px;
-  padding: 2px; 
-  float: left;
-  border: 1px solid #ccc;
-  background-color: #ccc;
-
+    font-size: .8em;
+    width: 130px;
+    height: 50px;
+    margin: 2px;
+    padding: 2px; 
+    float: left;
+    border: 1px solid #ccc;
+    background-color: #ccc;
 }
 
 .text_box {
-  display: inline;
-  position: absolute;
-  font-size: .8em;
-  line-height: 1em; 
-  top:    0px;
-  left:   10px;
-  width : 110px;
-  height: 41px;
-  background-color: #FFF;
-  resize: none;
+    display: inline;
+    position: absolute;
+    font: normal 11px/100% verdana;
+    top: 0px;
+    left: 10px;
+    width : 110px;
+    height: 41px;
+    background-color: #fff;
+    resize: none;
 }
 
 .box_draggable .box_handle {
-  display: inline;
-  position: absolute;
-  left : -4px;
-  top :  -4px;
+    display: inline;
+    position: absolute;
+    left : -4px;
+    top :  -4px;
 }
 
 .box_draggable .switch_color {
-  display: inline;
-  position: absolute;
-  left : 0px;
-  top : 10px;
-  height:16px;
-  width:15px;
-  border: 1px solid #ccc;
-  background-color: #ccc;
-  color: grey;
+    display: inline;
+    position: absolute;
+    left: 0px;
+    top: 10px;
+    height: 16px;
+    width: 15px;
+    border: 1px solid #ccc;
+    background-color: #ccc;
+    color: grey;
 }
 
 div.done-button {
-  opacity:0.4;
-  filter:alpha(opacity=0.4);
+    opacity:0.4;
+    filter:alpha(opacity=0.4);
 }
 
 div.done-button.active {
-  display: inline-block;
-  opacity:1.0;
-  filter:alpha(opacity=1.0);
+    display: inline-block;
+    opacity:1.0;
+    filter:alpha(opacity=1.0);
 }
-
-
 
 div.add_a_row_button {
-  display:  none;
+    display:  none;
 }
+
 div.add_a_row_button.visible {
- display: inline-block;
+    display: inline-block;
 }
 
 .show_expert_logic_model_link_div {
@@ -150,69 +155,58 @@ div.add_a_row_button.visible {
 }
 
 #phase_container.conclusion .show_expert_logic_model_link_div {
-        display:block;
-    }
+    display:block;
 }
-
-
 
 .box_draggable .box_handle .icon-move{
-  display: inline;
-  position: absolute;
-  left : 1px;
-  top :  33px;
+    display: inline;
+    position: absolute;
+    left : 1px;
+    top :  33px;
 }
-
 
 .backbone_box_div {
     display:block;
 }
 
-
-
 .backbone_box_div.hidden_box {
     display:none;
 }
 
-
 .hover_droppable {
-  background-color: blue;
-  /*opacity:0.4;
-  filter:alpha(opacity=40); */
+    background-color: blue;
+    /*opacity:0.4;
+    filter:alpha(opacity=40); */
 }
-
-
 
 .hover_droppable .text_box, 
 .hover_droppable .box_handle,
 .hover_droppable .switch_color {
-  z-index: -100;
-  opacity:0.0;
-  filter:alpha(opacity=0);
+    z-index: -100;
+    opacity:0.0;
+    filter:alpha(opacity=0);
 }
 
-
 .box_draggable {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .box_droppable {
-  height: 50px;
+    height: 50px;
 }
 
 .active_droppable {
-  background-color: green;
+    background-color: green;
 }
-
 
 .wipe-table-button-div {
     display: none;   
 }
 
 .inactive_box {
-  background-color: darkgrey;
-  opacity:0.4;
-  filter:alpha(opacity=40); /* For IE8 and earlier */
+    background-color: darkgrey;
+    opacity:0.4;
+    filter:alpha(opacity=40); /* For IE8 and earlier */
 }
 
 /* Pick scenario:*/
@@ -226,7 +220,6 @@ div.add_a_row_button.visible {
 #phase_container.pick_scenario .next_phase  {
     display:none;
 }
-
 
 /* Add inputs:*/
 #phase_container.add_inputs div.logic-model-initial-scenario_choice {
@@ -244,8 +237,9 @@ div.add_a_row_button.visible {
 
 /* Add intermediate columns:*/
 #phase_container.add_intermediate_columns div.logic-model-initial-scenario_choice {
-    display:none;
+     display:none;
 }
+
 /* Finish work:*/
 #phase_container.finish_work div.logic-model-initial-scenario_choice {
     display:none;
@@ -254,7 +248,6 @@ div.add_a_row_button.visible {
 #phase_container.conclusion div.logic-model-initial-scenario_choice {
     display:none;
 }
-
 
 /* CSS override of EVERYTHING for this activity */
 
@@ -267,7 +260,6 @@ div.add_a_row_button.visible {
     padding-bottom: 30px;
     color: #000;
 }
-
 
 #maincontent {
     width: auto;
@@ -328,26 +320,25 @@ div.add_a_row_button.visible {
     margin: 0 0 20px 0;
 }
 
-
-.scenario_block {
+.scenario-block {
     margin: 10px auto;
     padding: 0;
     border: 0;
     width: auto;
 }
 
-.scenario_header {
+.scenario-header {
     cursor: pointer;
     height: 40px;
     z-index: 1;
     background: transparent url('/site_media/img/caret_close.png') 10px 12px no-repeat;
 }
 
-.scenario_block .active {
+.scenario-block .active {
     background: transparent url('/site_media/img/caret_open.png') 10px 12px no-repeat;
 }
 
-.scenario_criteria {
+.scenario-criteria {
     margin: 0;
     padding: 0 0 0 30px;
     border: 0;
@@ -357,7 +348,7 @@ div.add_a_row_button.visible {
     font-weight: normal;
 }
 
-.scenario_content {
+.scenario-content {
     clear: both;
     margin: 0 0 0 30px;
     padding: 10px;
